--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -135,8 +135,8 @@
                             <input type="submit" id="nextstep" name="nextstep" style="display:none" />
 
                             <button class="btn btn-warning pull-right new-address-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
-                                @T("Checkout.NextButton")
-                                &nbsp;<i class="fa fa-caret-right"></i>
+								<span>@T("Checkout.NextButton")</span>
+                                <i class="fa fa-caret-right"></i>
                             </button>
 
                         </div>
