--- a/src/Presentation/SmartStore.Web/Views/Common/CurrencySelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/CurrencySelector.cshtml
@@ -26,7 +26,7 @@
 
     <div class="dropdown currency-selector">
         <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-            @activeCurr.ISOCode (@activeCurr.Symbol)
+			<span>@activeCurr.ISOCode (@activeCurr.Symbol)</span>
             <i class="fa fa-caret-down"></i>
         </a>
 
