--- a/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/LanguageSelector.cshtml
@@ -33,7 +33,7 @@
 
     <div class="dropdown language-selector">
         <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
-            @activeLang.Name
+			<span>@activeLang.Name</span>
             <i class="fa fa-caret-down"></i>
         </a>
         
