--- a/src/Presentation/SmartStore.Web/Views/Product/AskQuestion.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/AskQuestion.cshtml
@@ -62,7 +62,8 @@
             <div class="control-group">
                 <div class="controls">
                     <button type="submit" name="send-email" class="btn btn-primary">
-                        <i class="fa fa-caret-right"></i>&nbsp;@T("Common.Send")
+                        <i class="fa fa-caret-right"></i>
+						<span>@T("Common.Send")</span>
                     </button>
                 </div>
             </div>
