--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -74,6 +74,7 @@
 		jsRoot + "smartstore.shrinkmenu.js",
 		jsRoot + "smartstore.scrollbutton.js",
 		jsRoot + "smartstore.keynav.js",
+		jsRoot + "smartstore.articlelist.js",
 		jsRoot + "jquery.pnotify.js",
 		jsRoot + "jquery.bootstrap-touchspin.js",
 		jsRoot + "jquery.scrollTo.js",
