--- a/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.cshtml
@@ -104,8 +104,8 @@
 					<input type="submit" name="nextstep" id="nextstep" style="display:none"/>
 
 					<button class="btn btn-warning pull-right payment-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
-						@T("Checkout.NextButton")
-						&nbsp;<i class="fa fa-caret-right"></i>
+						<span>@T("Checkout.NextButton")</span>
+						<i class="fa fa-caret-right"></i>
 					</button>
 				</div>				
 			}
