--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Actions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Actions.cshtml
@@ -95,7 +95,7 @@
 						<i class="fa fa-chevron-left"></i>
 					</a>
 
-					<div class="artlist-action-wrapper pull-xs-left" style="margin: 0 0.5rem">
+					<div class="artlist-action-wrapper pull-xs-left hidden-xs-down" style="margin: 0 0.5rem">
 						<button class="btn btn-secondary btn-artlist-action">
 							<em class="hidden-md-down">Seite</em>
 							<span>@Model.Products.PageNumber</span>
